# maia-messaging

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  PRD.md  README.md  pyproject.toml
.claude/skills/python-async-patterns/: SKILL.md
.claude/skills/python-async-patterns/references/: advanced-patterns.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/phone/: CONTRACTS.md  FEATURE.md
examples/: .env.example  meta_send_all.py
messaging/: __init__.py  content_api.py  gateway.py  mock.py  pricing.py  twilio_utils.py  types.py
messaging/email/: __init__.py  base.py  sendgrid.py  smtp2go.py
messaging/phone/: __init__.py  brazil.py  normalize.py
messaging/providers/: __init__.py  base.py  meta.py  meta_schemas.py  twilio.py  whatsapp_personal.py
messaging/sms/: __init__.py  base.py  twilio.py
messaging/telegram/: __init__.py  base.py  bot_api.py  schemas.py
tests/: conftest.py  test_benchmarks.py  test_content_api.py  test_gateway.py  test_integration.py  test_meta_provider.py  test_meta_schemas.py  test_mock.py  test_phone_normalize.py  test_pricing.py  test_sendgrid_provider.py  test_smtp2go_provider.py  test_telegram_provider.py  test_telegram_schemas.py  test_twilio_provider.py  test_twilio_sms_provider.py  test_types.py  test_whatsapp_provider.py
