[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maia-messaging"
version = "0.1.0"
description = "Messaging gateway library for WhatsApp delivery via Twilio and WhatsApp Personal"
requires-python = ">=3.11"
dependencies = [
    "twilio>=9.0",
    "requests>=2.28",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["messaging"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 120
