[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maia-messaging"
version = "0.3.0"
description = "Multi-channel messaging library: WhatsApp (Twilio, Personal), Email (SendGrid, SMTP2GO), SMS (Twilio), Telegram (Bot API), template management"
requires-python = ">=3.11"
dependencies = [
    "twilio>=9.0",
    "requests>=2.28",
    "sendgrid>=6.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "types-requests>=2.28",
]
dev = [
    "maia-messaging[test]",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["messaging"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 120
